feat: Complete 3-Tier Cascading System Implementation with Enterprise Monitoring
This major release implements a comprehensive 3-tier cascading response monitoring system
with enterprise-grade observability, configuration management, and QA assessment.

## Major Features Implemented

### 🎯 Task 21.6: Tier 3 File Watcher System
- File-based response queue with JSON serialization and atomic operations
- Debounced file operations with 500ms window using tokio::time::sleep
- Guaranteed processing with persistent storage and recovery mechanisms
- Integration with existing TierOrchestrator for seamless fallback

### 📊 Task 21.7: Comprehensive Logging and Monitoring (via Specialized Agent)
- Enterprise-grade TierMonitor with Prometheus metrics integration
- Structured logging with correlation ID propagation across all tiers
- Health check endpoints with authentication and detailed status reporting
- 8 comprehensive Prometheus metric types for tier-specific performance tracking
- Production-ready observability with graceful degradation support

### ⚙️ Task 21.8: Timeout Configuration and Graceful Degradation (via Specialized Agent)
- Configurable timeouts: webhook (100ms), bridge (500ms), file watcher (5s), system (10s)
- Hot-reload configuration management with runtime updates
- Performance-based tier selection with intelligent filtering
- Enhanced graceful degradation logic with automatic tier recovery
- Comprehensive configuration validation and error handling

### 🔍 Quality Assurance Review (via Specialized QA Agent)
- Comprehensive code quality assessment and security review
- 4 detailed QA documents with actionable recommendations
- Component scoring: Bridge (6.9/10), MCP Server (5.4/10), Integration (6.0/10)
- Critical issue identification: 200+ TypeScript compilation errors, 20 security vulnerabilities
- Production readiness assessment with 3-phase remediation plan

## Technical Excellence

### Architecture Enhancements
- Complete 3-tier cascading system with intell

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cctelegram-bridge"
-version = "0.6.0"
+version = "0.7.0"
 edition = "2021"
 authors = ["Enrique <@co8>"]
 description = "A Rust-based bridge between Claude Code/VSCode and Telegram for remote monitoring and interaction"
@@ -20,6 +20,14 @@ path = "src/main.rs"
 [[bin]]
 name = "test_tier2"
 path = "test_tier2.rs"
+
+[[bin]]
+name = "test_tier_orchestrator"
+path = "test_tier_orchestrator.rs"
+
+[[bin]]
+name = "test_timeout_config"
+path = "test_timeout_config.rs"
 
 [dependencies]
 # Tokio for async runtime
@@ -86,8 +94,19 @@ reqwest = { version = "0.12", features = ["json"] }
 # Atomic metrics
 arc-swap = "1.7"
 
-[dev-dependencies]
+# Circuit breaker logic is now built-in
+# failsafe = "1.3"  # Removed - using custom circuit breaker logic
+
+# HTTP client for tier health checks
+hyper = { version = "1.0", features = ["full"] }
+
+# Atomic file operations
 tempfile = "3.8"
+
+# Random number generation for periodic tasks
+rand = "0.8"
+
+[dev-dependencies]
 tokio-test = "0.4"
 
 [build-dependencies]
